# cargo-sideload

./: .gitignore  Cargo.toml  README.md
src/: args.rs  commands.rs  config.rs  download.rs  main.rs  opts.rs  package_entry.rs  utils.rs
src/commands/: download.rs  fetch.rs  list.rs  outdated.rs
