[package]
name = "cargo-sideload"
description = "Download `.crate` files associated with a particular cargo registry to your local cargo cache."
version = "0.5.3"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/picklenerd/cargo-sideload"
homepage = "https://github.com/picklenerd/cargo-sideload"
documentation = "https://docs.rs/crate/cargo-sideload/0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
cargo = "0.50"
clap = "3.0.0-beta.2"
dirs = "3.0"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "=1.0.119", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
url = "2.2"
