[package]
name = "cargo-sideload"
description = "Tools for working with private Cargo registries"
version = "0.8.1"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/picklenerd/cargo-sideload"
homepage = "https://github.com/picklenerd/cargo-sideload"
documentation = "https://docs.rs/crate/cargo-sideload"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
cargo = "0.50"
clap = "3.0.0-beta.2"
dirs = "3.0"
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
semver = { version = "0.11.0", features = ["serde"] }
# Newer versions of serde trigger an error in the cargo crate
serde = { version = "=1.0.119", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
url = "2.2"
 